# claude-codepro

./: .gitignore  .mcp.json  .releaserc.json  README.md  install.sh  pyproject.toml
.claude/: settings.local.json  settings.local.template.json
.claude/ccp/hooks/: hooks.json  learn_reminder.py
.claude/ccp/skills/standards-accessibility/: SKILL.md
.claude/ccp/skills/standards-css/: SKILL.md
.claude/commands/: implement.md  learn.md  plan.md  setup.md  verify.md
.claude/hooks/: file_checker_python.py  file_checker_python.sh  file_checker_qlty.py  file_checker_qlty.sh
.claude/rules/: build.py  config.yaml
.claude/rules/standard/: learn.md  mcp-tools.md  workflow-enforcement.md
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: quality.yml  release-dev.yml  release.yml
ccp/: __init__.py  auth.py  banner.py  build.py  cli.py  updater.py  wrapper.py
ccp/statusline/: formatter.py  tips.py  widgets.py
ccp/tests/unit/: test_learn_reminder.py  test_wrapper.py
docs/site/: index.html  package-lock.json  package.json  vercel.json
docs/site/src/: App.tsx
docs/site/src/components/: FAQ.tsx  (+4 more)
installer/: __init__.py  build_cicd.py  cli.py  config.py  context.py  downloads.py  errors.py  platform_utils.py  ui.py
installer/steps/: __init__.py  base.py  bootstrap.py  ccp_binary.py  claude_files.py  config_files.py  dependencies.py  devcontainer.py  environment.py  finalize.py  git_setup.py  migration.py  preflight.py  premium.py  prerequisites.py  shell_config.py  vscode_extensions.py
installer/tests/unit/: test_base.py  test_downloads.py  test_ui.py
premium/src/ccp_premium/: cli.py  context_monitor.py  rules_supervisor_hook.py
scripts/: install.py  install.sh  setup-env.sh
scripts/lib/: dependencies.py  dependencies.sh  devcontainer.py  downloads.py  env_setup.py  files.py  migration.py  migration.sh  shell_config.py  ui.py  utils.py
tests/e2e/: conftest.py  test-build-rules.sh  test-config-merge.sh  test-install-docker.sh  test-install.sh  test-migration.sh  test_config_merge.py  test_install.py  test_migration.py  test_rules_build.py
tests/e2e/fixtures/: config-with-custom-rules.yaml
tests/unit/: test_install.py  test_install_sh.py  test_rules_build.py  test_shell_config.py
tests/unit/ccp/: test_auth.py  test_cli.py  test_updater.py  test_wrapper.py
tests/unit/installer/: test_base.py  test_build.py  test_cli.py  test_context.py  test_downloads.py  test_platform_utils.py  test_ui.py
(+24 files in other folders)
